force-app/main/default/objects/Cloudinary_Master_Settings__c/Cloudinary_Master_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cloudinary Master Settings</label>
</CustomObject>