force-app/main/default/objects/Cloudinary_Master_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API_Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>