force-app/main/default/objects/Cloudinary_Master_Settings__c/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <label>API_Secret</label>
    <length>50</length>
    <type>Text</type>
</CustomField>