force-app/main/default/objects/Cloudinary_Master_Settings__c/fields/Cloud_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Name__c</fullName>
    <label>Cloud_Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>