force-app/main/default/objects/Cloudinary_Master_Settings__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End_Point</label>
    <length>50</length>
    <type>Text</type>
</CustomField>